# projet6

./: .gitmodules  Animation.cpp  Animation.hpp  CMakeLists.txt  Model.cpp  Model.hpp  Texture.cpp  Texture.hpp  gc_3d_defs.hpp  geometry.cpp  main.cpp  mainFlo.cpp  mesh.h  stb.c  stb.h
CMake/: assimp.cmake  glew.cmake  imgui.cmake
common/: objloader.cpp  objloader.hpp
glad/: glad.c  glad.h
header/: buffer.hpp  camera.hpp  controls.hpp  directorySnippet.h  directorySnippet.hpp  mesh.h  model.h  shader_.h  table.hpp
objets3D/: Frog.fbx  FrogUV.fbx  FrogUVobj.mtl  MonObjet.fbx  Objet.blend  Objet.blend1  Snake_angry.fbx  Taxi.blend  Taxi.blend1  Taxi.fbx  UVshiba.fbx  UvWasp.mtl  Wasp.blend  Wasp.blend1  Wasp.fbx  cubeBiseaute.fbx  cylinderSphere.blend  cylinderSphere.fbx  frog.blend  panneau.blend  panneau.fbx  panneau.mtl  panneauPUB.fbx  plane.fbx  shiba.fbx  shibaRetournerTexture.fbx  shibaTexture.fbx  shibaUP.fbx  shibaUV.fbx  shiba_UV.mtl  ville.blend  ville.blend1  ville.fbx  ville.mtl  ville_plane.fbx
objets3D/GPUCache/: index
shader/: ModelShader.h  SimpleFragmentShader.fragmentshader.txt  SimpleFragmentShader.fragmentshaderGif.txt  TranformVertexShader.vertexshader.txt  loadShader.cpp
src/: buffer.cpp  camera.cpp  controls.cpp  directorySnippet.cpp  imgui_snippet.cpp  objloader.cpp  table.cpp
